Fix z-index for reals

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,9 +17,8 @@ button:focus {
 }
 
 .background-div {
-    z-index: 1;
+    z-index: -1;
     position: absolute;
-    position: fixed;
     width: 100%;
     height: 100%;
     background-image: url('../images/curlybraces.png');
